# video-analysis

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: bugs.md  decisions.md
prompts/: video_scene.md  viral_pattern_evidence.md  viral_pattern_evidence_compact.md
src/kimi_analysis/: __init__.py
tests/: test_kimi_analysis.py
